{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 95,
  "lineage": "b0786e08-b885-2a49-3a9c-3b69f2785004",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004364947f82c87a0",
            "arn": "arn:aws:ec2:us-east-2:504649076991:instance/i-0075d17ba795bee2f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm_instance_profile_1",
            "id": "i-0075d17ba795bee2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "umar-login.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0390fad1b66b9eac7",
            "private_dns": "ip-14-0-1-125.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "14.0.1.125",
            "public_ip": "18.189.27.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a82e88bb050a8d31",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c87db54072c7d38",
            "tags": {
              "Name": "Umar_instance"
            },
            "tags_all": {
              "Name": "Umar_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0358eb6e10205b159"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ssm_profile",
            "module.ec2.aws_iam_role.ssm_role",
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:security-group/sg-0358eb6e10205b159",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0358eb6e10205b159",
            "ingress": [],
            "name": "terraform-20250611194326028200000002",
            "name_prefix": "terraform-",
            "owner_id": "504649076991",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-ec2Umar"
            },
            "tags_all": {
              "Name": "SG-ec2Umar"
            },
            "timeouts": null,
            "vpc_id": "vpc-042656226ceb2a5f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:security-group-rule/sgr-00597d6e0b9477da1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00597d6e0b9477da1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0358eb6e10205b159",
            "security_group_rule_id": "sgr-00597d6e0b9477da1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:security-group-rule/sgr-03b68f293f07ec81f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03b68f293f07ec81f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0358eb6e10205b159",
            "security_group_rule_id": "sgr-03b68f293f07ec81f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:security-group-rule/sgr-0418ad57224460513",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0418ad57224460513",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0358eb6e10205b159",
            "security_group_rule_id": "sgr-0418ad57224460513",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:security-group-rule/sgr-05f923a7297651cec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05f923a7297651cec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0358eb6e10205b159",
            "security_group_rule_id": "sgr-05f923a7297651cec",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:internet-gateway/igw-008711a630f6aa968",
            "id": "igw-008711a630f6aa968",
            "owner_id": "504649076991",
            "tags": {
              "Name": "Umar_igw"
            },
            "tags_all": {
              "Name": "Umar_igw"
            },
            "vpc_id": "vpc-042656226ceb2a5f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:route-table/rtb-039ab13bd0348be8e",
            "id": "rtb-039ab13bd0348be8e",
            "owner_id": "504649076991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008711a630f6aa968",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Umar_vpc_public_routetable"
            },
            "tags_all": {
              "Name": "Umar_vpc_public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-042656226ceb2a5f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assosciations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc24b735a00e661",
            "route_table_id": "rtb-039ab13bd0348be8e",
            "subnet_id": "subnet-00c87db54072c7d38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:subnet/subnet-00c87db54072c7d38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "14.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c87db54072c7d38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Umar_vpc__public_subnet"
            },
            "tags_all": {
              "Name": "Umar_vpc__public_subnet"
            },
            "vpc_id": "vpc-042656226ceb2a5f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:504649076991:vpc/vpc-042656226ceb2a5f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "14.0.0.0/16",
            "default_network_acl_id": "acl-01bc0544e41b57def",
            "default_route_table_id": "rtb-0ffbb4ee1307bebab",
            "default_security_group_id": "sg-0f144fb936d547f73",
            "dhcp_options_id": "dopt-0143f4f4957a06345",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042656226ceb2a5f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffbb4ee1307bebab",
            "owner_id": "504649076991",
            "tags": {
              "Name": "Umar_vpc"
            },
            "tags_all": {
              "Name": "Umar_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}